# SmartCameraOperator

./: .gitignore  .gitmodules  PythonApplication2.py  README.md  db_viewer.py  image_viewer.py  requirements.txt
classification_reviewer/: CMakeLists.txt
classification_reviewer/src/: main.cpp
data/: createYoloLearnList.py  create_crops_for_boundingBoxes.py  readCsvAndYolofy.py
detection/: detect_in_video.py  zoom_smothing.py
detection/helpers_and_testing/: get_FPS_from_video.py
detection/labelling/: create_ImgSequence_from_Video.py  get_FPS_from_video.py
